Extra Section added

--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ h1 {
     border-radius: 5px;
     margin: 24px;
     width: 24%;
+    height: 50%;
 }
 
 .food p {
@@ -152,6 +153,7 @@ h1 {
     border-radius: 5px;
     margin: 24px;
     width: 24%;
+    height: 50%;
 }
 
 .shelter p {
@@ -168,6 +170,7 @@ h1 {
     border-radius: 5px;
     margin: 24px;
     width: 24%;
+    height: 50%;
 }
 
 .edu p {
@@ -207,6 +210,31 @@ h1 {
 /* Section-5 */
 
 .mid4-section {
+    margin-bottom: 60px;
+}
+
+.update {
+    float: left;
+    margin: 50px 100px;
+}
+
+.et {
+    text-align: center;
+}
+
+.etext {
+    color: #707070;
+    text-align: center;
+    margin: 21px 360px;
+}
+
+iframe {
+    margin-left: 390px;
+}
+
+/* Section-6 */
+
+.mid5-section {
     margin-bottom: 0px;
 }
 
@@ -251,6 +279,8 @@ h1 {
     font-weight: 300;
     margin-left: -5px;
 }
+
+
 
 /* Footer */
 
